- authzforce-ce-parent upgraded to 8.1.0 - authzforce-ce-core-pdp-api upgraded to 19.1.0 - PMD / Spotbugs issue fixes (New class ImmutableAttributeDesignator) - pdp.xsd: 'version' changed from required to optional with default value equal to xsd version - Removed BasePdpdEngine constructor arg: xacmlExpressionFactory - Removed RootPolicyEvaluators.Base constructor arg: xacmlExpressionFactory - Removed PdpEngineConfiguration#getXacmlExpressionFactory() - Maven POM: pdp.xsd classes generated with immutable-xjc-plugin instead of jaxb2-value-constructor